--- a/css/home.css
+++ b/css/home.css
@@ -38,44 +38,12 @@
     transform: translate(-50%, -50%);
     max-width: 1100px;
     width: 100%;
-    animation: fadeinbigVidText 1.5s ease 1s backwards;
-}
-
-@keyframes beforeRightTop {
-    0% { width: 80vw; }
-    100% { width: 10vw; }
-}
-@keyframes beforeRightBottom {
-    0% { height: 20vh; }
-    100% { height: 10vh; }
-}
-
-.bigVid-text::before {
-    content: "";
-    background: #490a29;
-    width: 10vw;
-    height: 3px;
-    position: absolute;
-    right: 2vw;
-    bottom: -5vh;
-    animation: beforeRightTop 1s ease-in backwards;
-    animation-delay: 1s;
-}
-.bigVid-text::after {
-    content: "";
-    background: #490a29;
-    width: 3px;
-    height: 10vh;
-    position: absolute;
-    right: 2vw;
-    bottom: -5vh;
-    animation: beforeRightBottom 1s ease-in backwards;
-    animation-delay: 1s;
+    animation: fadeinbigVidText 1.5s ease 0.5s backwards;
 }
 
 .bigVid-text h1 {
-    font-size: calc(1.2vw * 3);
-    color: #000000;
+    font-size: calc(1.4vw * 3);
+    color: #2a101d;
     font-weight: 900;
     text-align: center;
     margin: 0;
@@ -83,6 +51,7 @@
     text-transform: uppercase;
     display: table;
     position: relative;
+    letter-spacing: 0.08em;
     width: 100%;
 }
 
@@ -93,38 +62,6 @@
     100% {
         opacity: 1;
     }
-}
-
-@keyframes beforeLeftTop {
-    0% { width: 80vw; }
-    100% { width: 10vw; }
-}
-@keyframes beforeLeftBottom {
-    0% { height: 20vh; }
-    100% { height: 10vh; }
-}
-
-.bigVid-text h1::before {
-    content: "";
-    background: #490a29;
-    width: 10vw;
-    height: 3px;
-    position: absolute;
-    left: 2vw;
-    top: -5vh;
-    animation: beforeLeftTop 1s ease-in backwards;
-    animation-delay: 1s;
-}
-.bigVid-text h1::after {
-    content: "";
-    background: #490a29;
-    width: 3px;
-    height: 10vh;
-    position: absolute;
-    left: 2vw;
-    top: -5vh;
-    animation: beforeLeftBottom 1s ease-in backwards;
-    animation-delay: 1s;
 }
 
 .bigVid-text .bigVid-dig {
@@ -152,7 +89,7 @@
 
 .bigVid-text .bigVid-dig span {
     color: #490a29;
-    font-weight: 400;
+    font-weight: 900;
     padding: 0 0.2em 0 0.5em;
     position: relative;
 }
@@ -355,7 +292,7 @@
     width: 70vw;
     height: 100vh;
     float: right;
-    background: #e0e0e0;
+    background: linear-gradient(#ffffff, #f7ecf1);
 }
 
 .company-centerTop {
@@ -442,76 +379,58 @@
 #technology {
     width: 100vw;
     height: 100vh;
+    background-image: url(../images/technology-bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 
-.tech-left {
-    width: 60vw;
+.tech-center {
+    width: 100vw;
     height: 100vh;
-    float: left;
-    background: #f3f3f3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .tech-heading {
-    height: 10vh;
-    padding: 1vh 2vw;
+    padding: 1vh 2vw 4vh 2vw;
 }
 
 .tech-heading h1 {
     font-size: calc(2vh + 1.5vw);
-    color: #000000;
+    color: #ffffff;
     font-weight: 300;
     text-transform: uppercase;
     line-height: 1em;
     margin: 0.2em 0 0 0;
     position: relative;
     z-index: 2;
-    text-align: right;
+    text-align: center;
 }
-
-/* .tech-heading h1::before {
-    content: "";
-    background: #490a29;
-    width: 12vw;
-    height: 2px;
-    position: absolute;
-    left: 1.5vw;
-    top: 4vh;
-}
-
-.tech-heading h1::after {
-    content: "";
-    background: #490a29;
-    width: 2px;
-    height: 5vh;
-    position: absolute;
-    left: 1.5vw;
-    top: 4vh;
-} */
 
 .tech-heading h3 {
     font-size: calc(1.22vh + 1vw);
-    color: #212121;
+    color: #e0e0e0;
     font-weight: 300;
     text-transform: uppercase;
     line-height: 1em;
     margin: 0.2em 0 0 0;
     position: relative;
-    text-align: right;
+    text-align: center;
 }
 
 .tech-cat {
     width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
-    height: 45vh;
-    padding: 0vh 2vw 2vh 2vw;
+    padding: 0vh 1vw 2vh 1vw;
 }
 
 .tech-cat-row {
-    flex: 1;
-    flex-basis: 50%;
+    flex: 0 1 33%;
     display: flex;
     flex-direction: row; 
     margin: 2vh 0;
@@ -519,8 +438,8 @@
 }
 
 .tech-cat-row img {
-    width: calc(2vw + 2vh);
-    height: calc(2vw + 2vh);
+    width: calc(1.4vw + 1.4vh);
+    height: calc(1.4vw + 1.4vh);
     display: block;
 }
 
@@ -530,17 +449,17 @@
     background: #fff;
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,.1);
     margin-right: 2vw;
-    margin-left: 2vw;
+    margin-left: 1vw;
 }
 .tech-cat-heading {
-    font-size: calc(0.9vh + 0.6vw);
+    font-size: calc(0.8vh + 0.5vw);
     color: #ffffff;
     background: #490a29;
-    font-weight: 300;
+    font-weight: 900;
+    letter-spacing: 1px;
     text-transform: uppercase;
     margin: 0;
-    padding: 0 2vw 0 1vw;
-    line-height: calc(2vw + 2vh);
+    padding: 0.2em 0.5em;
     display: inline-table;
     position: relative;
 }
@@ -558,238 +477,16 @@
 }
 
 .tech-cat-ul ul li {
-    font-size: calc(.5vh + .5vw);
+    font-size: calc(0.8vh + 0.6vw);
     color: #212121;
-    font-weight: 700;
-    text-transform: uppercase;
+    font-weight: 400;
     margin: 0.5em 0.6em;
 }
 
 .tech-cat-ul ul li i {
     color: #490a29;
-    font-size: 1em;
+    font-size: 1.2em;
     margin-right: 0.5em;
-}
-/* Articial Intellegence */
-.tech-cat-bottom {
-    width: 60vw;
-    display: table;
-    height: 45vh;
-    background: #2a101d url(../images/business_intelligence.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.business-i {
-    width: 100%;    
-    padding: 2vh 1vw;
-}
-
-.business-i h1 {
-    font-size: calc(1.7vh + 1.2vw);
-    color: #ffffff;
-    font-weight: 300;
-    text-transform: uppercase;
-    line-height: 1em;
-    margin: 0em 0 0.5em 0;
-    position: relative;
-    text-align: center;
-}
-
-.bi-features {
-    width: 100%;
-    display: table;
-}
-.bi-features-first {
-    border-bottom: 1px solid #fff;
-}
-
-.bi-box {
-    width: 25%;
-    float: left;
-    overflow: hidden;
-    padding: 1vh 1vw
-}
-
-.bi-box:not(:last-child){
-    border-right: 1px solid #ffffff;
-}
-
-.bi-img {
-    width: calc(2vh + 2vw);
-    height: calc(2vh + 2vw);
-    display: block;
-    margin: 0 auto;
-}
-
-.bi-img img {
-    width: 80%;
-    height: 80%;
-    display: block;
-    margin: 0 auto;
-}
-
-.bi-box-text {
-    width: 100%;
-}
-
-.bi-box-text h3 {
-    font-size: calc(0.8vh + 0.5vw);
-    color: #ffffff;
-    font-weight: 300;
-    text-transform: uppercase;
-    line-height: 1em;
-    margin: 0.2em 0 0.5em 0;
-    position: relative;
-    text-align: center;
-}
-
-.bi-box-text h3 span {
-    font-weight: 700;
-    display: block;
-}
-
-.bi-paragraph {
-    width: 100%;
-}
-
-.bi-paragraph p {
-    font-size: calc(0.8vh + 0.8vw);
-    color: #ffffff;
-    font-weight: 300;
-    line-height: 1.2em;
-    margin: 0.2em 0 0.5em 0;
-    position: relative;
-    text-align: center;
-}
-
-.bi-paragraph a {
-    width: 10vw;
-    height: 3vh;
-    font-size: calc(0.8vh + 0.4vw);
-    font-weight: 700;
-    border-bottom: 1px solid #ffffff;
-    color: #ffffff;
-    line-height: 3vh;
-    text-align: center;
-    text-transform: uppercase;
-    display: block;
-    margin: 0 auto;
-    padding: 0 0 0.2vh 0;
-    box-sizing: content-box;
-}
-
-.bi-paragraph a:hover {
-    background: #FFF;
-    color: #000;
-}
-
-.tech-right {
-    width: 40vw;
-    height: 100vh;
-    float: right;
-    background: #490a29;
-}
-
-.dev-section {
-    display: block;
-    margin: 0 auto;
-    width: 100%;
-    height: 80vh;
-}
-
-.dev-title {
-    display: table;
-    width: 100%;
-    padding: 1vh auto 0 auto;
-}
-
-.dev-title h1 {
-    font-size: calc(1.8vh + 1.2vw);
-    color: #ffffff;
-    font-weight: 300;
-    text-transform: uppercase;
-    line-height: 1em;
-    margin: 1em 0 0 0;
-    position: relative;
-    text-align: center;
-}
-
-@media (min-width:1900px) and (min-height:600px) and (max-height:1000px) {
-    .dev-title {
-        display: none;
-    }
-}
-
-.dev-list {
-    display: table;
-    margin: 0 auto;
-}
-
-.dev-list ul {
-    margin: 0.5vh 0;
-    padding: 0.5vh 0;
-    list-style: none;
-    position: relative;
-}
-
-.dev-list ul li {
-    font-size: calc(1vh + 0.5vw);
-    color: #ffffff;
-    font-weight: 900;
-    line-height: 1.4em;
-    padding-left: 0;
-    margin: 1vh 0;
-    position: relative;
-    text-transform: uppercase;
-}
-
-/* .dev-list ul li::before {
-    content: "";
-    border-radius: 50%;
-    height: calc(0.8vh + 0.8vw);
-    width: calc(0.8vh + 0.8vw);
-    background: #ffffff;
-    position: absolute;
-    top: calc(0.6vh + 0.6vw);
-    transform: translateY(-50%);
-    left: calc(0vw - (0.35vh + 0.35vw));
-} */
-
-.dev-list ul li ul {
-    padding-left: 1.2vw;
-}
-
-.dev-list ul li ul::before {
-    content: "";
-    height: 100%;
-    width: 3px;
-    background: #fff;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-.dev-list ul li ul li ul::before {
-    width: 3px;
-}
-
-.dev-list ul li ul li::before {
-    content: "";
-    height: calc(0.5vh + 0.5vw);
-    width: calc(0.5vh + 0.5vw);
-    top: calc(0.45vh + 0.45vw);
-    left: calc((0.5vh + 0.5vw) - 1.2vw);
-}
-
-.dev-list ul li ul li ul li::before {
-    left: calc((0.40vh + 0.40vw) - 1.2vw);
-}
-
-.dev-list ul li ul li {
-    padding-left: 0;
-    text-transform: none;
-    font-size: calc(0.6vh + 0.6vw);
-    font-weight: 300;
 }
 
 .tech-cat-boxes {
@@ -803,32 +500,6 @@
     height: 20vh;
     float: left;
     position: relative;
-}
-
-.tech-startup {
-    background: url(../images/icons/startups.svg) no-repeat;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center center;
-    position: relative;
-}
-
-.tech-startup::after {
-    content: "";
-    width: 1px;
-    height: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 0;
-    background: #ffffff;
-}
-
-.tech-domain {
-    background: url(../images/icons/hostingdomain.svg) no-repeat;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center center;
 }
 
 .tech-cat-box-text {
@@ -858,24 +529,6 @@
     margin: 0 0 0 0;
     text-shadow: 0px 0px 2px 10px #271c55;
 }
-.tech-startup h1 {
-    text-align: right;
-}
-.tech-startup h3 {
-    text-align: right;
-    font-weight: 300;
-}
-
-.tech-domain h1 {
-    text-align: left;
-}
-.tech-domain h3 {
-    color: #FFF;
-    text-align: left;
-    font-weight: 400;
-}
-
-
 
 /*
     **
@@ -897,7 +550,7 @@
 	height: 100vh;
 	display: table;
 	clear: both;
-	background: #f9f9f9;
+	background: linear-gradient(#ffffff, #f7ecf1);
 	position: relative;
 }
 
@@ -910,33 +563,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
-/* 
-#services::before {
-    content: "";
-    width: 23vw;
-    height: 50vh;
-    position: absolute;
-    background: #490a29;
-    left: 0;
-    top: 0;
-    clip-path:polygon(100% 28%, 100% 10px, 0% 10px, 0% 100%)
-}
-
-#services::after {
-    content: "";
-    width: 10vw;
-    height: 20vh;
-    position: absolute;
-    background: #490a29;
-    right: 0;
-    top: 0;
-    clip-path: polygon(100% 100%, 100% 10px, 0% 10px, 20% 50%);
-} */
 
 .services-heading {
 	width: 100%;
-	/* background: #2a101d; */
-	/* clip-path: polygon(80% 100%, 20% 100%, 0% 0%, 100% 0%); */
 	position: relative;
 	z-index: 1;
 }
@@ -1016,7 +645,7 @@
 	flex: 1;
     text-align: center;
     position: relative;
-    padding: 0vh 2vw 1vh 2vw;
+    padding: 0vh 2vw 0.5vh 2vw;
     transition: all 0.7s cubic-bezier(.57,.21,.69,1.25)
 }
 
@@ -1046,9 +675,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 1vh 2vw;
+    padding: 0.5vh 2vw;
     margin: 1vh auto;
-    border-top: 1px solid #e0e0e0;
+    border-top: 1px solid #f9f9f9;
     justify-content: center;
     align-content: center;
 }
@@ -1060,10 +689,9 @@
     width: calc(2vh + 2vw);
     height: calc(2vh + 2vw);
     margin-top: 1vh;
-    background: #f3f3f3;
-    border: 1px solid #e0e0e0;
-    padding: 5px 5px;
-    margin: 0.5vh 0.5vw;
+    border: 1px solid #f9f9f9;
+    padding: 2px 2px;
+    margin: 0.4vh 0.4vw;
 }
 
 
@@ -1087,7 +715,7 @@
 	width: 100%;
 	display: table;
 	clear: both;
-	background: #f1f1f1;
+	background: linear-gradient(#f7ecf1, #ffffff);
 	position: relative;
 }
 
@@ -1139,16 +767,12 @@
     .services-heading p { font-size: calc(1.22vh + 1vw); }
     
     .service-tech img {
-        display: block;
         max-width: unset;
         max-height: unset;
         width: calc(1.5vh + 1vw);
         height: calc(1.5vh + 1vw);
         margin-top: 1vh;
-        background: #f3f3f3;
         border: 1px solid #e0e0e0;
-        padding: 5px 5px;
-        margin: 0.5vh 0.5vw;
     }
 
         
@@ -1169,7 +793,7 @@
 
 .testimonial-row {
 	width: 100%;
-	margin: 10vh 0 0 0;
+	margin: 5vh 0 0 0;
 }
 
 .testimonial-row .carousel-item {
@@ -1184,12 +808,15 @@
 .testimonial-box {
 	max-width: 30vw;
 	background: #FFFFFF;
-	box-shadow: 0px 0px 10px 2px #e0e0e0;
 	padding: 3vh 3vw;
 	position: relative;
 	margin: 0 auto;
     box-sizing: border-box;
     display: table;
+}
+
+.active.testimonial-box {
+	box-shadow: 0px 0px 10px 2px #e0e0e0;
 }
 
 .testimonial-text {
@@ -1203,8 +830,8 @@
 	font-weight: 300;
 	color: #000000;
 	margin-top: 0;
-	margin-bottom: 3vh;
-	padding-bottom: 5vh;
+	margin-bottom: calc(1vh + 1vw);
+	padding-bottom: calc(1vh + 1vw);
 	border-bottom: 1px solid #e0e0e0;
 }
 
@@ -1228,7 +855,7 @@
 }
 
 .testimonial-author-text h3 {
-	font-size: calc(1.6vh + 1.6vw);
+	font-size: calc(1.6vh + 1vw);
 	font-weight: 400;
 	color: #2a101d;
 	margin: 0;
@@ -1236,9 +863,10 @@
 }
 
 .testimonial-author-text h5 {
-	font-size: calc(0.6vh + 0.8vw);
+	font-size: calc(0.6vh + 0.6vw);
 	font-weight: 300;
-	color: #212121;
+    color: #212121;
+    letter-spacing: 0.08em;
 	margin-top: 0;
 	margin-bottom: 0;
 	text-transform: uppercase;
