--- a/css/home.css
+++ b/css/home.css
@@ -813,10 +813,11 @@
 	margin: 0 auto;
     box-sizing: border-box;
     display: table;
+    transition: box-shadow 0.5s;
 }
 
 .active.testimonial-box {
-	box-shadow: 0px 0px 10px 2px #e0e0e0;
+	box-shadow: 10px 10px 15px 15px rgba(0,0,0,0.05);
 }
 
 .testimonial-text {
@@ -870,4 +871,9 @@
 	margin-top: 0;
 	margin-bottom: 0;
 	text-transform: uppercase;
+}
+
+.input-field>label:not(.label-icon).active {
+    top: 0.8vh;
+    opacity: 0.6;
 }
