--- a/css/style.css
+++ b/css/style.css
@@ -638,7 +638,7 @@ header #header {
 	padding-bottom: 3vh;
 	min-height: 300px;
 	background: #FFF;
-	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
+	box-shadow: 10px 10px 15px 15px rgba(0,0,0,0.05);
 	right: 10vw;
 	top: 10vh;
 }
@@ -650,10 +650,10 @@ header #header {
 }
 
 .footer-contact .input-row:not(:last-child){
-	margin: 4vh auto;
+	margin: 2vh auto;
 }
 .footer-contact .input-row:nth-child(4){
-	margin-bottom: 0;
+	margin-bottom: 2vh;
 }
 
 .footer-contact .input-row .select-wrapper input.select-dropdown {
