--- a/css/webdevportfolio.css
+++ b/css/webdevportfolio.css
@@ -52,8 +52,15 @@
 
 
 .owl-carousel .owl-stage-outer {
-    max-height: 50vh;
+    /* max-height: 50vh;
+    overflow-y: scroll; */
+}
+
+.owl-item .item {
+    
+    position: relative;
     overflow-y: scroll;
+    max-height: 50vh;
 }
 
 .webDevShot-slider .owl-nav {
@@ -99,7 +106,7 @@
     padding: 0.3em 1em;
     border-radius: 4px;
     background-color: #490a29;
-    position: absolute;
+    position: fixed;
     right: 1em;
     top: 2em;
     color: #ffffff;
